# Agents-team

./: AGENTS-BOUNDARY.md  README.md  log.md  plan.md
.claude/skills/agent-council/: council.config.yaml
.codex/skills/agent-council/: SKILL.md
Voice-sync prompter/: AGENTS-BOUNDARY.md  VSP-plan.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
Voice-sync prompter/src/: App.tsx  index.css
Voice-sync prompter/src/hooks/: index.ts  useAutoScroll.ts  useSpeechRecognition.ts
Voice-sync prompter/src/store/: index.ts  recognitionStore.ts  scriptStore.ts  settingsStore.ts
Voice-sync prompter/src/utils/: index.ts  textMatcher.ts  textNormalizer.ts
apps/planner/: package-lock.json  package.json
docs/: design.md  plan.md  tech-stack.md  ui-spec.md
keyword-generator/: config.yaml  main.py  requirements.txt  web_app.py
keyword-generator/data/: ads_group_id.csv  clients.csv  clients.xlsx
keyword-generator/templates/: index.html
projects/web-planning/: .env.example  README.md  eslint.config.mjs  package-lock.json  package.json
projects/web-planning/apps/: .env.example
projects/web-planning/docs/: data-model.md  deployment-plan.md  design-tokens.md  plan.md  review-checklist.md  ui-flow.md
voice-sync-prompter/: .gitignore  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json
voice-sync-prompter/apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
voice-sync-prompter/apps/desktop/src-tauri/src/: main.rs
voice-sync-prompter/apps/desktop/src-tauri/src/commands/: capture_protection.rs  mod.rs
(+125 files in other folders)
